--- a/PrelimlabWork3/prelim.html
+++ b/PrelimlabWork3/prelim.html
@@ -35,7 +35,7 @@
         <span class="close">&times;</span>
         <h2>Prelim Grade Results</h2>
         <div id="modalResults"></div>
-        <button id="clearBtn" class="clear-btn">Clear</button>
+        <button id="modalClearBtn" class="clear-btn">Clear</button>
     </div>
 </div>
 
