--- a/PrelimlabWork3/prelim.html
+++ b/PrelimlabWork3/prelim.html
@@ -9,23 +9,69 @@
 <body>
 
 <div class="container">
-    <h1>Prelim Grade Calculator</h1>
+    <div class="header">
+        <div class="icon">📊</div>
+        <h1>Prelim Grade Calculator</h1>
+        <p class="subtitle">Calculate your required exam score</p>
+    </div>
 
-    <label>Attendance Score (0–100)</label>
-    <input type="number" id="attendance" min="0" max="100">
+    <div class="form-card">
+        <div class="input-group">
+            <label for="attendance">
+                <span class="label-icon">✓</span>
+                Attendance Count
+            </label>
+            <div class="input-wrapper">
+                <input type="number" id="attendance" min="0" max="5" placeholder="0-5">
+                <span class="input-hint">out of 5</span>
+            </div>
+        </div>
 
-    <label>Lab Work 1 (0–100)</label>
-    <input type="number" id="lab1" min="0" max="100">
+        <div class="lab-section">
+            <h3 class="section-title">Lab Work Scores</h3>
+            
+            <div class="input-group">
+                <label for="lab1">
+                    <span class="label-icon">📝</span>
+                    Lab Work 1
+                </label>
+                <div class="input-wrapper">
+                    <input type="number" id="lab1" min="0" max="100" placeholder="0-100">
+                    <span class="input-hint">%</span>
+                </div>
+            </div>
 
-    <label>Lab Work 2 (0–100)</label>
-    <input type="number" id="lab2" min="0" max="100">
+            <div class="input-group">
+                <label for="lab2">
+                    <span class="label-icon">📝</span>
+                    Lab Work 2
+                </label>
+                <div class="input-wrapper">
+                    <input type="number" id="lab2" min="0" max="100" placeholder="0-100">
+                    <span class="input-hint">%</span>
+                </div>
+            </div>
 
-    <label>Lab Work 3 (0–100)</label>
-    <input type="number" id="lab3" min="0" max="100">
+            <div class="input-group">
+                <label for="lab3">
+                    <span class="label-icon">📝</span>
+                    Lab Work 3
+                </label>
+                <div class="input-wrapper">
+                    <input type="number" id="lab3" min="0" max="100" placeholder="0-100">
+                    <span class="input-hint">%</span>
+                </div>
+            </div>
+        </div>
 
-    <div class="button-group">
-        <button id="calculateBtn">Calculate</button>
-        <button id="clearBtn" class="clear-btn">Clear</button>
+        <div class="button-group">
+            <button id="calculateBtn" class="btn btn-primary">
+                <span>Calculate Grade</span>
+            </button>
+            <button id="clearBtn" class="btn btn-secondary">
+                <span>Clear All</span>
+            </button>
+        </div>
     </div>
 </div>
 
@@ -33,9 +79,8 @@
 <div id="resultModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Prelim Grade Results</h2>
+        <h2>📈 Grade Results</h2>
         <div id="modalResults"></div>
-        <button id="modalClearBtn" class="clear-btn">Clear</button>
     </div>
 </div>
 
